--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -651,6 +651,228 @@ blockquote {
   bottom: -35px;
   margin-left: 1rem;
 }
+.cid-s37zo1INlN {
+  background-image: url("../../../assets/images/conference26-1920.jpg");
+}
+.cid-s37zo1INlN .push__top {
+  padding-top: 80px;
+}
+.cid-s37zo1INlN .wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 780px;
+}
+.cid-s37zo1INlN .title__block {
+  width: 70%;
+}
+.cid-s37zo1INlN .mbr-section-subtitle,
+.cid-s37zo1INlN .bottom__about__text,
+.cid-s37zo1INlN .bottom__subtitle {
+  line-height: 25px;
+}
+.cid-s37zo1INlN .mbr-section-subtitle {
+  margin-bottom: 30px;
+}
+.cid-s37zo1INlN .mbr-section-title {
+  line-height: 57px;
+}
+.cid-s37zo1INlN .widget__number {
+  margin-bottom: 8px;
+}
+.cid-s37zo1INlN .date__block {
+  padding: 20px;
+  width: 25%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.cid-s37zo1INlN .divider {
+  background-color: #191f23;
+  width: 100%;
+  height: 2px;
+  display: inline-block;
+  margin-bottom: 25px;
+}
+.cid-s37zo1INlN .widget {
+  width: 100%;
+  padding: 0 0 70px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.cid-s37zo1INlN .widget__item {
+  padding: 0 20px;
+  width: 33%;
+}
+.cid-s37zo1INlN .bottom__about {
+  width: 90%;
+  background-color: rgba(0, 0, 0, 0.95);
+  padding: 40px 40px 70px;
+}
+.cid-s37zo1INlN .popup__text {
+  display: inline-block;
+  margin-left: 10px;
+}
+.cid-s37zo1INlN .mbr-media {
+  display: inline-block;
+}
+.cid-s37zo1INlN .mbr-figure {
+  align-self: flex-start;
+}
+.cid-s37zo1INlN .anim {
+  width: 62px;
+  height: 62px;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 0.4s;
+  position: relative;
+  background-color: rgba(25, 31, 35, 0.95);
+  border-radius: 50%;
+}
+.cid-s37zo1INlN .anim span {
+  color: #ffffff;
+  font-size: 18px;
+  cursor: pointer;
+  width: 62px;
+  height: 62px;
+  line-height: 62px;
+  position: relative;
+  display: inline-block;
+  margin-left: 2px;
+}
+.cid-s37zo1INlN .anim span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-35%);
+}
+.cid-s37zo1INlN .anim:before {
+  content: '';
+  border-color: inherit;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  background: rgba(25, 31, 35, 0.5);
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-duration: 1.2s;
+  animation-name: popup__video;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
+}
+.cid-s37zo1INlN .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: #191f23;
+  width: 100%;
+  height: 100%;
+}
+.cid-s37zo1INlN .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-s37zo1INlN .modalWindow .modalWindow-video {
+  height: calc(80vw / 1.778);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-s37zo1INlN a.close {
+  position: absolute;
+  right: 100px;
+  top: 50px;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 16px;
+  padding: 10px;
+  transition: all 0.2s;
+}
+.cid-s37zo1INlN a.close:hover {
+  color: #ffffff;
+}
+@keyframes popup__video {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s37zo1INlN .wrap__title {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+  .cid-s37zo1INlN .date__block {
+    margin-top: 50px;
+  }
+  .cid-s37zo1INlN .mbr-section-title {
+    line-height: 1;
+  }
+  .cid-s37zo1INlN .push__top {
+    padding-top: 30px;
+  }
+  .cid-s37zo1INlN .widget__item {
+    padding: 0 15px;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s37zo1INlN .bottom__about {
+    width: 100%;
+    padding: 20px;
+  }
+  .cid-s37zo1INlN .widget {
+    margin-top: 10px;
+    padding: 0;
+    flex-direction: column;
+  }
+  .cid-s37zo1INlN .widget__item {
+    display: flex;
+    width: 100%;
+  }
+  .cid-s37zo1INlN .widget__item .divider {
+    display: none;
+  }
+}
+@media (max-width: 575px) {
+  .cid-s37zo1INlN .title__block {
+    width: 100%;
+  }
+  .cid-s37zo1INlN .wrap__title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .cid-s37zo1INlN .date__block {
+    margin-top: 20px;
+    width: 50%;
+    position: relative;
+    top: auto;
+    right: auto;
+  }
+  .cid-s37zo1INlN .mbr-section-subtitle {
+    margin-bottom: 15px;
+  }
+  .cid-s37zo1INlN .divider {
+    margin-bottom: 10px;
+  }
+  .cid-s37zo1INlN a.close {
+    right: 50px;
+    top: 25px;
+  }
+  .cid-s37zo1INlN .modalWindow .modalWindow-video {
+    height: calc(90vw / 1.778);
+    width: 90vw;
+    margin: 0 auto;
+  }
+}
 .cid-rXtdLtXXvn {
   overflow: hidden;
   padding-top: 4rem;
@@ -687,96 +909,6 @@ blockquote {
 }
 .cid-rXtdLtXXvn .mbr-section-btn {
   margin-top: 10px;
-}
-.cid-rXtdLtXXvn .mbr-media {
-  display: inline-block;
-}
-.cid-rXtdLtXXvn .mbr-figure {
-  align-self: flex-start;
-  margin-bottom: 20px;
-  width: 100%;
-}
-.cid-rXtdLtXXvn .anim {
-  width: 62px;
-  height: 62px;
-  transition: all cubic-bezier(0.4, 0, 0.2, 1) 0.4s;
-  position: relative;
-  background-color: rgba(25, 31, 35, 0.95);
-  border-radius: 50%;
-}
-.cid-rXtdLtXXvn .anim span {
-  color: #ffffff;
-  font-size: 18px;
-  cursor: pointer;
-  width: 62px;
-  height: 62px;
-  line-height: 62px;
-  position: relative;
-  display: inline-block;
-  margin-left: 2px;
-}
-.cid-rXtdLtXXvn .anim span.mbri-play:before {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-35%);
-}
-.cid-rXtdLtXXvn .anim:before {
-  content: '';
-  border-color: inherit;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 1;
-  background: rgba(25, 31, 35, 0.5);
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-duration: 1.2s;
-  animation-name: popup__video;
-  animation-iteration-count: infinite;
-  animation-delay: 1s;
-}
-.cid-rXtdLtXXvn .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: #191f23;
-  width: 100%;
-  height: 100%;
-}
-.cid-rXtdLtXXvn .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-rXtdLtXXvn .modalWindow .modalWindow-video {
-  height: calc(80vw / 1.778);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-rXtdLtXXvn a.close {
-  position: absolute;
-  right: 100px;
-  top: 50px;
-  color: #ffffff;
-  z-index: 5000000;
-  font-size: 16px;
-  padding: 10px;
-  transition: all 0.2s;
-}
-.cid-rXtdLtXXvn a.close:hover {
-  color: #ffffff;
-}
-@keyframes popup__video {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1.5);
-    opacity: 0;
-  }
 }
 @media (max-width: 1199px) {
   .cid-rXtdLtXXvn .title__block {
