--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1240,6 +1240,83 @@ hr {
 .cid-s37Fokdkk4 .card:first-child .card-inner:hover .card-title:after {
   background: #ffffff;
 }
+.cid-s37SQLQciH {
+  padding-top: 135px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-s37SQLQciH h1 {
+  margin-bottom: 0.2rem;
+}
+.cid-s37SQLQciH .container-fluid {
+  padding: 0;
+}
+.cid-s37SQLQciH img {
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+  z-index: 10;
+}
+.cid-s37SQLQciH .mbr-figure {
+  height: 100%;
+}
+.cid-s37SQLQciH .col-lg-6 {
+  padding: 0;
+}
+.cid-s37SQLQciH .mbr-text {
+  color: #747474;
+}
+.cid-s37SQLQciH hr {
+  width: 40px;
+  height: 2px;
+  top: -1rem;
+}
+.cid-s37SQLQciH .mbr-section-subtitle {
+  margin-bottom: 3.5rem;
+}
+.cid-s37SQLQciH .mbr-section-subtitle-1 {
+  color: #e9204f;
+}
+.cid-s37SQLQciH .mbr-section-subtitle-2 {
+  margin-top: 4.2rem;
+}
+.cid-s37SQLQciH .mbr-figure::after {
+  content: "";
+  background-color: #e9204f;
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  bottom: -20px;
+  right: -5px;
+  z-index: 1;
+}
+@media (max-width: 992px) {
+  .cid-s37SQLQciH .mbr-figure::after {
+    bottom: -15px;
+    right: 0px;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s37SQLQciH .row {
+    margin: 0;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s37SQLQciH .media-content {
+    padding-left: 2.2rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-s37SQLQciH .left-block {
+    margin-top: 4.5rem;
+  }
+}
+.cid-s37SQLQciH .btn {
+  color: #101010 !important;
+}
+.cid-s37SQLQciH .btn:hover {
+  color: #ffffff !important;
+}
 .cid-rRBILABAaP {
   padding-top: 90px;
   padding-bottom: 0px;
@@ -1389,124 +1466,6 @@ hr {
     margin: 0;
   }
 }
-.cid-rRBIOaOVKu {
-  padding-top: 0px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-@media (max-width: 992px) {
-  .cid-rRBIOaOVKu {
-    padding-top: 0px;
-    padding-bottom: 30px;
-  }
-  .cid-rRBIOaOVKu .box {
-    margin-top: 2.5rem;
-  }
-}
-.cid-rRBIOaOVKu .box {
-  background-image: url("../../../assets/images/office-3.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 380px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px 5px 5px 5px;
-  box-shadow: 0px 3px 20px 0px rgba(25, 0, 7, 0.25);
-}
-.cid-rRBIOaOVKu .icon-wrap {
-  border: 4px solid #ffffff !important;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s;
-  text-shadow: 0px 0 6px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0 6px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-}
-.cid-rRBIOaOVKu .icon-wrap span {
-  padding-left: 8px;
-}
-.cid-rRBIOaOVKu .mbr-media span {
-  font-size: 28px;
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  transition: all 0.25s;
-  color: #ffffff !important;
-}
-.cid-rRBIOaOVKu .mbr-media span.mbri-play:before {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-35%);
-  -moz-transform: translateX(-35%);
-  -ms-transform: translateX(-35%);
-  -o-transform: translateX(-35%);
-  transform: translateX(-35%);
-}
-.cid-rRBIOaOVKu .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-rRBIOaOVKu .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-rRBIOaOVKu .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-rRBIOaOVKu a.close {
-  position: absolute;
-  right: 4vw;
-  top: 4vh;
-  color: #ffffff;
-  z-index: 5000000;
-  font-size: 37px;
-  background: #000;
-  padding: 20px;
-  border-radius: 50%;
-}
-.cid-rRBIOaOVKu a.close:hover {
-  color: #ffffff;
-}
-@media (max-width: 576px) {
-  .cid-rRBIOaOVKu {
-    padding-top: 0px;
-    padding-bottom: 21px;
-  }
-  .cid-rRBIOaOVKu .box {
-    height: 250px;
-  }
-}
-.cid-rRBIOaOVKu .mbr-text {
-  color: #747474;
-  margin-bottom: 2rem;
-}
-.cid-rRBIOaOVKu .mbr-section-title {
-  margin-bottom: 2rem;
-}
-.cid-rRBIOaOVKu .left-block {
-  padding-right: 4rem;
-}
-@media (min-width: 767px) {
-  .cid-rRBIOaOVKu .row {
-    padding: 0 1rem;
-  }
-}
-.cid-rRBIOaOVKu .btn {
-  margin-left: 0rem;
-}
 .cid-rRBIPc6fPB {
   padding-top: 15px;
   padding-bottom: 75px;
@@ -1579,6 +1538,80 @@ hr {
 }
 .cid-rRBIPc6fPB .count-title {
   color: #e1201d;
+}
+.cid-s37YuxMe2n {
+  padding-top: 105px;
+  padding-bottom: 105px;
+  background-color: #efefef;
+}
+.cid-s37YuxMe2n .back {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 65%;
+  height: 100%;
+  background-color: #e1201d;
+}
+.cid-s37YuxMe2n img {
+  width: 100%;
+}
+.cid-s37YuxMe2n p {
+  margin-top: 6rem;
+}
+.cid-s37YuxMe2n .content-wrapper {
+  max-width: 750px;
+  margin: auto;
+  position: relative;
+  padding: 0 2rem;
+}
+.cid-s37YuxMe2n .content-wrapper {
+  padding-top: 6rem;
+}
+.cid-s37YuxMe2n h4 {
+  position: absolute;
+  width: fit-content;
+  padding: 0;
+  margin: 0;
+  right: 6rem;
+  transform: rotate(-270deg);
+  transform-origin: bottom right;
+  bottom: 0;
+}
+@media (max-width: 1200px) {
+  .cid-s37YuxMe2n .content-wrapper {
+    padding-top: 0rem;
+  }
+  .cid-s37YuxMe2n p {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-s37YuxMe2n .back {
+    width: 100%;
+    height: 75%;
+  }
+  .cid-s37YuxMe2n .content-wrapper {
+    padding: 0 3rem;
+    padding-top: 4rem;
+  }
+  .cid-s37YuxMe2n p {
+    margin-top: 4rem;
+  }
+}
+.cid-s37YuxMe2n .content-wrapper {
+  padding-right: 8rem;
+}
+@media (max-width: 767px) {
+  .cid-s37YuxMe2n .content-wrapper {
+    padding: 0rem;
+    padding-top: 4rem;
+  }
+  .cid-s37YuxMe2n .content-wrapper {
+    padding-right: 3rem;
+  }
+  .cid-s37YuxMe2n h4 {
+    right: 2rem;
+  }
 }
 .cid-rRBIQ0rba1 {
   padding-top: 90px;
@@ -1950,38 +1983,40 @@ hr {
 }
 .cid-rRBJdz0XSB H2 {
   color: #ffffff;
+  text-align: right;
 }
-.cid-s37P2aZWEr {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background: #000000;
+.cid-s37VlvJSYy {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #000000;
 }
-.cid-s37P2aZWEr img {
-  width: 125px;
-  margin: auto;
-  filter: brightness(250%);
+@media (max-width: 767px) {
+  .cid-s37VlvJSYy .col-sm-6 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .cid-s37VlvJSYy .card {
+    margin-bottom: 2rem;
+  }
 }
-.cid-s37P2aZWEr .card {
-  transition: opacity 0.3s;
-  height: fit-content;
-  padding: 1rem 0rem;
-  opacity: 0.5;
-  margin-bottom: 1rem;
-}
-.cid-s37P2aZWEr .card:hover {
-  opacity: 0.9;
-}
-.cid-s37P2aZWEr H1 {
-  color: #ffffff;
-}
-.cid-s37P2aZWEr .row {
-  justify-content: space-between;
+@media (min-width: 767px) and (max-width: 992px) {
+  .cid-s37VlvJSYy .card {
+    margin-bottom: 2rem;
+  }
 }
 @media (min-width: 992px) {
-  .cid-s37P2aZWEr .col-lg-1 {
-    flex: 0 0 12.5%;
-    max-width: 12.5%;
+  .cid-s37VlvJSYy .card-wrapper {
+    padding: 0 1.5rem;
   }
+}
+@media (min-width: 767px) {
+  .cid-s37VlvJSYy .row {
+    margin: 0;
+  }
+}
+.cid-s37VlvJSYy .container {
+  border-top: 1px solid #EBEBEB;
+  padding-top: 2rem;
 }
 .cid-rRBJerbUh5 .google-map {
   height: 34rem;
@@ -2119,7 +2154,7 @@ hr {
 .cid-rQtQNcOfYq {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #000000;
+  background-color: #e1201d;
 }
 .cid-rQtQNcOfYq .media-container-row {
   align-items: center;
@@ -2185,4 +2220,7 @@ hr {
 }
 .cid-rQtQNcOfYq .link:hover {
   color: #ffffff;
+}
+.cid-rQtQNcOfYq .media-container-row .mbr-text {
+  color: #000000;
 }
