create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2153,6 +2153,160 @@ hr {
   font-size: 2rem;
   color: #e1201d;
 }
+.cid-s3aw7OTyF2 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s3aw7OTyF2 .card-icon {
+  font-size: 56px;
+  color: #e1201d;
+  transition: color 0.3s;
+}
+.cid-s3aw7OTyF2 .card-title {
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.cid-s3aw7OTyF2 .link-ico {
+  font-size: 0.8rem;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 100%;
+  padding: 0.5rem 0;
+  font-weight: 900;
+  padding-left: 9px;
+  padding-right: 7px;
+}
+.cid-s3aw7OTyF2 .line {
+  width: 35px;
+  height: 3px;
+  display: inline-block;
+  background: #e1201d;
+  margin-bottom: 1.5rem;
+  transition: background 0.3s;
+}
+.cid-s3aw7OTyF2 .card {
+  padding: 0!important;
+}
+.cid-s3aw7OTyF2 .card-wrapper {
+  padding: 4rem;
+  transition: background 0.3s;
+}
+.cid-s3aw7OTyF2 .card-wrapper:hover {
+  background: #e1201d;
+}
+.cid-s3aw7OTyF2 .card-wrapper:hover .card-icon {
+  color: #000000;
+}
+.cid-s3aw7OTyF2 .card-wrapper:hover .line {
+  background: #000000;
+}
+.cid-s3aw7OTyF2 .card1 {
+  background: #000000;
+}
+.cid-s3aw7OTyF2 .card2 {
+  background: #050505;
+}
+.cid-s3aw7OTyF2 .card3 {
+  background: #0a0a0a;
+}
+.cid-s3aw7OTyF2 .card4 {
+  background: #0f0f0f;
+}
+.cid-s3aw7OTyF2 .card5 {
+  background: #141414;
+}
+.cid-s3aw7OTyF2 .card6 {
+  background: #1a1a1a;
+}
+.cid-s3aw7OTyF2 .col-lg-x {
+  -ms-flex: 0 0 20%;
+  flex: 0 0 20%;
+  max-width: 20%;
+}
+@media (max-width: 1400px) {
+  .cid-s3aw7OTyF2 .col-md-6 {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s3aw7OTyF2 .col-12 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+.cid-s3aw2R54YV {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #000000;
+}
+.cid-s3aw2R54YV .card-box {
+  background-color: #ffffff;
+  padding: 4rem 2rem;
+}
+.cid-s3aw2R54YV h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-s3aw2R54YV p {
+  color: #767676;
+  text-align: left;
+}
+.cid-s3aw2R54YV .card-wrapper {
+  border: 1px solid #ffffff;
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-s3aw2R54YV .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-s3aw2R54YV .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.cid-s3aw2R54YV h3 {
+  position: relative;
+  margin-top: 2rem;
+  letter-spacing: 2px;
+}
+.cid-s3aw2R54YV h3:after {
+  content: "";
+  color: #333;
+  transition: all 0.3s;
+  width: 30px;
+  position: absolute;
+  top: 50%;
+  height: 1px;
+  background-color: #e1201d;
+  margin-left: 10px;
+}
+.cid-s3aw2R54YV h3:hover:after {
+  margin-left: -15px;
+}
+.cid-s3aw2R54YV P {
+  text-align: center;
+}
+.cid-s3aw2R54YV .card-title {
+  text-align: center;
+}
+.cid-s3aw2R54YV H3 {
+  text-align: center;
+}
+.cid-s3aw2R54YV .number {
+  text-align: center;
+}
+.cid-s3aw2R54YV H1 {
+  text-align: center;
+}
 .cid-s37VlvJSYy {
   padding-top: 0px;
   padding-bottom: 30px;
